// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns raw schema column information > rawColumns 1`] = `
[
  {
    "dataType": "int",
    "defaultValue": undefined,
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isOptional": false,
    "isSerial": true,
    "isWritable": false,
    "maxLen": undefined,
    "name": "id",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
    "type": "int",
  },
  {
    "dataType": "varchar",
    "defaultValue": undefined,
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isOptional": false,
    "isSerial": false,
    "isWritable": true,
    "maxLen": 100,
    "name": "name",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
    "type": "string",
  },
  {
    "dataType": "varchar",
    "defaultValue": undefined,
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isOptional": true,
    "isSerial": false,
    "isWritable": true,
    "maxLen": 255,
    "name": "email",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
    "type": "string",
  },
  {
    "dataType": "varchar",
    "defaultValue": "active",
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isOptional": true,
    "isSerial": false,
    "isWritable": true,
    "maxLen": 20,
    "name": "status",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
    "type": "string",
  },
  {
    "dataType": "json",
    "defaultValue": undefined,
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isOptional": true,
    "isSerial": false,
    "isWritable": true,
    "maxLen": undefined,
    "name": "profile",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
    "type": "json",
  },
  {
    "dataType": "timestamp",
    "defaultValue": "CURRENT_TIMESTAMP",
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isOptional": true,
    "isSerial": false,
    "isWritable": true,
    "maxLen": undefined,
    "name": "created_at",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
    "type": "date",
  },
  {
    "dataType": "enum",
    "defaultValue": "viewer",
    "description": "",
    "enumValues": [
      "admin",
      "editor",
      "viewer",
    ],
    "isArray": false,
    "isEnum": true,
    "isNullable": true,
    "isOptional": true,
    "isSerial": false,
    "isWritable": true,
    "maxLen": 6,
    "name": "roles",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
    "type": "any",
  },
]
`;

exports[`returns schema models > userTable 1`] = `
{
  "columns": [
    {
      "dataType": "int",
      "defaultValue": undefined,
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isOptional": false,
      "isSerial": true,
      "isWritable": false,
      "maxLen": undefined,
      "name": "id",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "type": "int",
    },
    {
      "dataType": "varchar",
      "defaultValue": undefined,
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isOptional": false,
      "isSerial": false,
      "isWritable": true,
      "maxLen": 100,
      "name": "name",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "varchar",
      "defaultValue": undefined,
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isOptional": true,
      "isSerial": false,
      "isWritable": true,
      "maxLen": 255,
      "name": "email",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "varchar",
      "defaultValue": "active",
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isOptional": true,
      "isSerial": false,
      "isWritable": true,
      "maxLen": 20,
      "name": "status",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "json",
      "defaultValue": undefined,
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isOptional": true,
      "isSerial": false,
      "isWritable": true,
      "maxLen": undefined,
      "name": "profile",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "type": "json",
    },
    {
      "dataType": "timestamp",
      "defaultValue": "CURRENT_TIMESTAMP",
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isOptional": true,
      "isSerial": false,
      "isWritable": true,
      "maxLen": undefined,
      "name": "created_at",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "type": "date",
    },
    {
      "dataType": "enum",
      "defaultValue": "viewer",
      "description": "",
      "enumValues": [
        "admin",
        "editor",
        "viewer",
      ],
      "isArray": false,
      "isEnum": true,
      "isNullable": true,
      "isOptional": true,
      "isSerial": false,
      "isWritable": true,
      "maxLen": 6,
      "name": "roles",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "type": "any",
    },
  ],
  "name": "users",
  "schemaName": "test",
  "type": "table",
}
`;
